<?xml version="1.0"?>
<package>
  <name>ros_erle_camera</name>
  <version>0.0.0</version>
  <description>The ros_erle_camera package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="ahcorde@erlerobot.com">ahcorde</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>OpenCV</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>OpenCV</run_depend>

  <export>

  </export>
</package>
